# Fiverr

./: .gitignore
C/Clients/Alina/: What needs to be done).docx  arrays.c
C/Clients/frederkmadsen1/: definitely.c
C/Clients/frederkmadsen1/Delivery/: definitely.c
C/Clients/frederkmadsen1/change/: CMakeLists.txt  main.c
C/Clients/humaned/: bst.c  cop3502-as4-sample-output.txt
C/Clients/humaned/Code/: CMakeLists.txt  main.c  test.c
C/Clients/humaned/Deliver/: main.c
C/Clients/lethalasian/Files/: server_test.exe.stackdump  test_clinet.exe.stackdump
C/Clients/lethalasian/Order 3/: async-tcpserve1r.c
C/Clients/spugzy/DNA/: CMakeLists.txt
C/Clients/spugzy/DNA_Seq/: main.c
C/Clients/vladpopov/: ex 1.docx
C/Clients/vladpopov/Delivery/: main.c  multiplication.h  sum.h
C/Clients/vladpopov/code/: Makefile  displayMatrix.h  test.exe.stackdump  tickets.h
CPP/Clients/adamyadgar/: Attachment_1642005502.txt  Attachment_1642005506-1.txt
CPP/Clients/adamyadgar/delivery/: main.cpp
CPP/Clients/amutaki/: project description -2.docx
CPP/Clients/aryanaen1207/Order 4/: project one-1.docx
CPP/Clients/aryanaen1207/Order 5/: Reflecting.docx  readme.md
CPP/Clients/aryanaen1207/Order 6/: CS 255 Business Requirements Document Template.docx  Discussion1.docx
CPP/Clients/brainpinkernell/Order 1/Code/: CMakeLists.txt
CPP/Clients/brainpinkernell/Order 1/Code/Task5/: get_size_test.cpp
CPP/Clients/brainpinkernell/Order 1/Code/Task7/: add_to_file.cpp  guess_word_from_file.cpp  letter_elsewhere.cpp  letter_elsewhere.h  letter_match.cpp  rand_int.cpp  task7.txt
CPP/Clients/brainpinkernell/Order 11/: CMakeLists.txt
CPP/Clients/brainpinkernell/Order 12/: main.cpp
CPP/Clients/brainpinkernell/Order 13/: CMakeLists.txt
CPP/Clients/brainpinkernell/Order 4/: Readme.txt
CPP/Clients/brainpinkernell/Order 4/code/: CMakeLists.txt
CPP/Clients/brainpinkernell/Order 4/code/Task4/: get_size.cpp  get_size.h  read_words_test.cpp
CPP/Clients/brainpinkernell/Order 4/code/Task5/part1/: all_5_letters.h  five_letter_word.cpp
CPP/Clients/brainpinkernell/Order 5/code/: CMakeLists.txt
CPP/Clients/brainpinkernell/Order 5/code/P3/: min_and_max.cpp  put_in_order.cpp
CPP/Clients/brainpinkernell/Order 6/: Point.cpp
CPP/Clients/brainpinkernell/Order 8/codes/: CMakeLists.txt
CPP/Clients/brainpinkernell/Order 8/codes/p8.2.4n5/: linked-list-functs.h
CPP/Clients/brainpinkernell/Order 8/codes/p9.2/: Node.cpp  linked-list-functs.h  linked-list-tests.cpp
CPP/Clients/brainpinkernell/Order 8/codes/p9.3/: linked-list-tests.cpp
CPP/Clients/brainpinkernell/Order 8/codes/p9.4/: GameCard-test.cpp  GameCard.cpp  GameCard.h
CPP/Clients/brainpinkernell/Order 9/code/: CMakeLists.txt
CPP/Clients/brainpinkernell/Order 9/code/Task 10.4/: Node.h
CPP/Clients/brainpinkernell/Order 9/code/Task 10.5/: CardPile.cpp  CardPile.h  GameCard.cpp  GameCard.h  linked-list-functs.cpp  test
CPP/Clients/brainpinkernell/Order 9/code/Task 11.2/: GameCard.cpp
CPP/Clients/brainpinkernell/Order 9/code/Task 11.3/: NewGameCard.h  dynamic-cards.cpp
CPP/Clients/brainpinkernell/Order 9/code/Task 11.5/: Rankable.h  game.cpp  rand_int.h
CPP/Clients/bryanojh/: C__ Requirements(1) .docx  Food Ordering System Report.docx
CPP/Clients/bryanojh/restaurant/: Admin.h  BinarySearchTree.cpp  CMakeLists.txt  Customer.cpp  Customer.h  Order.h  Queue.h
CPP/Clients/chaosmasta/Delivery/: Plane.cpp
CPP/Clients/chaosmasta/untitled/: AirplaneSeatAssignmentFP - Assignment.cpp  CMakeLists.txt  Plane.h  Seat.cpp  Seat.h  a.exe.stackdump
CPP/Clients/cjohn321/code/: main.cpp
CPP/Clients/mithilamithi572/Order 4/code/: Account.cpp  Account.hpp  CMakeLists.txt  LinkedList.hpp  Node.cpp  Node.hpp  Poll.cpp  Poll.hpp  Post.cpp  Post.hpp  Promotional.cpp
CPP/Clients/mohamedketata1/: Account.h  Transaction.cpp  Transaction.h  project_report_template (9).docx
CPP/Clients/moosie02/Order 1/code/: CMakeLists.txt
CPP/Clients/moosie02/Order 1/code/P1/: main.cpp
CPP/Clients/moosie02/Order 1/code/P2/: is_square.cpp  main.cpp
CPP/Clients/moosie02/Order 1/code/P3/: calculate_area.cpp  is_square.hpp  main.cpp
CPP/Clients/moosie02/Order 1/code/P4/: calculate_area.hpp  main.cpp
CPP/Clients/moosie02/Order 1/code/P5/: get_fibonacci_value.cpp  get_fibonacci_value.hpp  main.cpp
CPP/Clients/moosie02/Order 1/code/P6/: getSumOfDigits.cpp  getSumOfDigits.hpp  isHappy.cpp  isHappy.hpp  main.cpp
CPP/Clients/moosie02/Order 2/codes/: CMakeLists.txt
CPP/Clients/moosie02/Order 2/codes/P1/: binary_search.cpp  binary_search.h  goldbach_expectation.cpp  goldbach_expectation.h  main.cpp
CPP/Clients/moosie02/Order 2/codes/P2/: main.cpp  menu.cpp  menu.h
CPP/Clients/moosie02/Order 2/codes/P3/: function1.cpp  function1.h  function2.cpp  function2.h  function3.cpp  function3.h  main.cpp
CPP/Clients/moosie02/Order 2/codes/P4/: get_square_error.cpp  get_square_error.h  linspace.h  linspce.cpp  main.cpp  sum_of_squares.cpp  sum_of_squares.h
CPP/Clients/moosie02/Order 2/codes/P5/: is_palindrome.cpp  is_palindrome.h  main.cpp  reverse.cpp  reverse.h
CPP/Clients/thepat101/code/: CMakeLists.txt  bishop.cpp  bishop.h  blockedKing.cpp  blockedKing.h  chess  game.h  king.cpp  king.h  location.cpp  main.cpp  piece.cpp  player.cpp  player.h  queen.h  rook.cpp
CPP/Clients/xkongzilla/: Direction.txt  Documentation.docx
CPP/Jila/adamyadgar/: Attachment_1642005494-1.txt
CPP/Jila/brainpinkernell/Order 2/code/: CMakeLists.txt
CPP/Jila/brainpinkernell/Order 2/code/Task4/: get_winner.cpp  get_winner_test.cpp  legal_move.h
CPP/Jila/brainpinkernell/Order 2/code/Task5/: show_multiples.h
CPP/Jila/brainpinkernell/Order 2/code/Task6/: hide_letters.cpp  hide_letters.h
Java/clients/adam_sa/: CVE.java  Main.java  Task 2.docx  Unconfirmed 278140.crdownload
Java/clients/dreams434/: answers.txt.txt  strings3.txt  strings4.txt
Java/clients/velki111/: Main.java
Python/Clients/jasonh2000/: date.ipynb  date.py
Python/Clients/jsen_204/: Assessment Report Output.csv
SQL/k_chappy/Order 1/: k_chappy_A1_queries.sql
SQL/k_chappy/Order 2/: delivery.sql
(+862 files in other folders)
